fix: gap for game cards

--- a/frontend/src/component/core/cardColumn.module.css
+++ b/frontend/src/component/core/cardColumn.module.css
@@ -1,4 +1,5 @@
 .container {
   display: flex;
   flex-flow: column;
+  gap: 10px;
 }
